SCSS. Added partials scss and Google Fonts
- Added Google Fonts: Lora and Ubuntu
- Added partials scss: abstracts and vendors
- Added variables: colors, fonts and breakpoints
- Added mixins: media queries

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,5 +1,11 @@
-$color-white: #fff;
+// PARTIALS SCSS
+// ===============================================================================
 
-body {
-	background-color: $color-white;
-}
+// ABSTRACTS
+//----------------------------------------------------------------------
+// variables
+@import 'abstracts/variables/abstracts-variables-breakpoints';
+@import 'abstracts/variables/abstracts-variables-colors';
+@import 'abstracts/variables/abstracts-variables-fonts';
+// mixins
+@import 'abstracts/mixins/abstracts-mixins-media-queries';
